Change theme from leap-day to midnight

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: DS Portfolio
 logo: /images/Profile.jpg
 #description: text below image
 show_downloads: true
-theme: jekyll-theme-leap-day
+theme: jekyll-midnight
