Update portfolio title in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: DS Portfolio
+title: Professional Practice Portfolio
 logo: /images/Profile.jpg
 #description: text below image
 show_downloads: true
